[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprites/Intro/stars.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Intro/spacewar.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Intro/enemies.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Intro/protagonist_ship.png" type="Texture" id=4]
[ext_resource path="res://IntroAnimation.gd" type="Script" id=5]
[ext_resource path="res://ExplosionAnim.tscn" type="PackedScene" id=6]
[ext_resource path="res://Audio/space_weapons.wav" type="AudioStream" id=7]

[node name="IntroAnimation" type="Node2D"]
script = ExtResource( 5 )

[node name="bg" type="Sprite" parent="."]
modulate = Color( 0.301961, 0.301961, 0.301961, 1 )
position = Vector2( 509.22, 306.244 )
scale = Vector2( 0.560666, 0.585323 )
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 514.2, 308.872 )
scale = Vector2( 0.558655, 0.592653 )
texture = ExtResource( 1 )

[node name="Light2D" type="Light2D" parent="Sprite"]
texture = ExtResource( 1 )
energy = 1.57
mode = 2

[node name="Protagonist" type="Sprite" parent="."]
modulate = Color( 0.709804, 0.788235, 0.8, 1 )
position = Vector2( 104.369, 248.62 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
offset = Vector2( 699.992, -130 )

[node name="protExp1" parent="Protagonist" instance=ExtResource( 6 )]
modulate = Color( 1, 1, 1, 0.439216 )
position = Vector2( 140.841, -101.885 )
scale = Vector2( 0.8, 0.8 )
maxA = 0.0
maxE = 0.0
timeOff = 1.2

[node name="protExp2" parent="Protagonist" instance=ExtResource( 6 )]
modulate = Color( 1, 1, 1, 0.447059 )
position = Vector2( -8.98976, -80.9086 )
scale = Vector2( 0.8, 0.8 )
maxA = 0.0
maxE = 0.0
timeOff = 1.5

[node name="protExp3" parent="Protagonist" instance=ExtResource( 6 )]
modulate = Color( 1, 1, 1, 0.556863 )
position = Vector2( 113.871, 89.8983 )
scale = Vector2( 0.7, 0.7 )
maxA = 0.0
maxE = 0.0
timeOff = 1.8

[node name="enemies" type="Sprite" parent="."]
modulate = Color( 0.317647, 0.196078, 0.196078, 1 )
position = Vector2( 826.391, 53.688 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 3 )

[node name="ExplosionAnim3" parent="enemies" instance=ExtResource( 6 )]
position = Vector2( 168.85, -50.779 )
scale = Vector2( 0.0666667, 0.0666667 )

[node name="ExplosionAnim4" parent="enemies" instance=ExtResource( 6 )]
position = Vector2( -5.43945, -130.574 )
scale = Vector2( 0.15, 0.15 )

[node name="ExplosionAnim10" parent="enemies" instance=ExtResource( 6 )]
position = Vector2( 167.893, 226.093 )
scale = Vector2( 0.15, 0.15 )

[node name="ExplosionAnim5" parent="enemies" instance=ExtResource( 6 )]
position = Vector2( -56.4141, 313.864 )
scale = Vector2( 0.0666667, 0.0666667 )

[node name="ExplosionAnim6" parent="enemies" instance=ExtResource( 6 )]
position = Vector2( 363.465, 578.227 )
scale = Vector2( 0.08, 0.08 )

[node name="ExplosionAnim7" parent="enemies" instance=ExtResource( 6 )]
position = Vector2( 505.402, 77.7441 )
scale = Vector2( 0.08, 0.08 )

[node name="ExplosionAnim8" parent="enemies" instance=ExtResource( 6 )]
position = Vector2( -88.6563, -366.102 )
scale = Vector2( 0.08, 0.08 )

[node name="ExplosionAnim9" parent="enemies" instance=ExtResource( 6 )]
position = Vector2( -641.992, -332.771 )
scale = Vector2( 0.08, 0.08 )

[node name="enemies2" type="Sprite" parent="."]
modulate = Color( 0.658824, 0.658824, 0.658824, 1 )
position = Vector2( 659.475, 133.987 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 3 )

[node name="ExplosionAnim" parent="enemies2" instance=ExtResource( 6 )]
position = Vector2( -53.9961, -260.221 )
scale = Vector2( 0.166667, 0.166667 )

[node name="ExplosionAnim3" parent="enemies2" instance=ExtResource( 6 )]
position = Vector2( -101.762, -386.4 )
scale = Vector2( 0.166667, 0.166667 )

[node name="ExplosionAnim4" parent="enemies2" instance=ExtResource( 6 )]
position = Vector2( 177.23, -50.9045 )
scale = Vector2( 0.2, 0.2 )

[node name="ExplosionAnim2" parent="enemies2" instance=ExtResource( 6 )]
position = Vector2( 486.33, 71.7445 )
scale = Vector2( 0.166667, 0.166667 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -10.462
pitch_scale = 0.71
autoplay = true

[node name="Tween" type="Tween" parent="."]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
